# leptonica-feedstock

./: .recipe_maintainers.json  .travis.yml  README.md  conda-forge.yml  pixi.toml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_aarch64_.yaml  linux_c_compilergcc.yaml  linux_c_compilertoolchain_c.yaml  linux_ppc64le_.yaml  osx_.yaml  osx_64_.yaml  osx_arm64_.yaml  osx_c_compilerclang.yaml  osx_c_compilertoolchain_c.yaml  win_64_.yaml  win_c_compilervs2015vc14.yaml
.github/: CODEOWNERS
.scripts/: build_steps.sh  run_docker_build.sh  run_osx_build.sh
recipe/: bld.bat  build.bat  build.sh  cmake.patch  meta.yaml  recipe.yaml
recipe/cmake_test/: CMakeLists.txt  CheckFunctions.cmake
recipe/patches/: 0001-point-to-our-own-prefix-in-CMake-metadata-on-windows.patch
